--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  overflow-y: hidden;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(233, 200, 200);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+  height: 100%;
+  width: 100%;
+  max-width: 1366px;
+  padding: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tableCRUD {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.theadCRUD {
+}
+
+.trTheadCRUD {
+}
+
+.thCRUD {
+  border-style: solid;
+  border-width: 1px 0px 1px 0px;
+  border-color: rgb(0, 0, 0);
+  font-weight: bold;
+  padding: 1rem;
+  text-align: left;
+}
+
+.TbodyCRUD {
+}
+
+.trTbodyCRUD {
+  margin: 0;
+  padding: 0;
+}
+
+.tdCRUD {
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: rgb(0, 0, 0);
+  padding: 1rem;
+  text-align: left;
+}
+
+.ContentButtons {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.buttonEdit {
+  padding: 0.5rem 1rem;
+  background-color: rgb(42, 139, 47);
+  border-radius: 4px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  border: none;
+  cursor: pointer;
+}
+
+.buttonDel {
+  padding: 0.5rem 1rem;
+  background-color: rgb(194, 23, 23);
+  border-radius: 4px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  border: none;
+  cursor: pointer;
+}
+
+.buttonDel:hover {
+  background-color: rgb(108, 45, 150);
+}
+
+.buttonEdit:hover {
+  background-color: rgb(199, 102, 139);
+}
+
+.buttonAdd {
+  margin-top: 21.44px;
+  padding: 0.5rem 1rem;
+  background-color: rgb(42, 139, 47);
+  border-radius: 4px;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  border: none;
+  cursor: pointer;
+}
+
+.buttonAdd:hover {
+  background-color: rgb(199, 102, 139);
 }
